samples/_failures_safe/1761695537_591273_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b4f4f8f.c: In function ‘main’:
./samples/SAFE/__tmp_6b4f4f8f.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
